<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Creatures</string>

    <string name="creatures_loading_progress_message">Loading creatures&#8230;</string>

    <string name="add_creature">Add Creature</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>

    <!-- Creatures -->

    <string name="description_search">Search</string>
    <string name="hint_search">Search Creatures</string>

    <string-array name="creatures_filter_options">
        <item>All Creatures</item>
        <item>New Creatures</item>
        <item>Favorite Creatures</item>
    </string-array>

    <string name="creatures_empty_message">No creatures</string>

    <!-- Creature -->

    <string name="description_share">Share</string>
    <string name="description_website">Website</string>
    <string name="description_delete">Delete</string>
    <string name="description_edit">Edit</string>
    <string name="description_unfavorite">Unfavorite</string>
    <string name="description_favorite">Favorite</string>
    <string name="description_creature_image">Creature image</string>

    <string name="error_unable_open_url">Unable to open URL</string>

    <string name="toast_favorited">Creature added to favorites</string>
    <string name="toast_unfavorited">Creature removed from favorites</string>
    <string name="toast_deleted">Creature deleted</string>

    <string name="title_share">Share Creature</string>
    <string name="title_delete_creature">Are you sure?</string>
    <string name="message_delete_creature">You want to delete this innocent creature? (Bastard)</string>

    <!-- Add Creature -->

    <string name="creature_title">Title</string>
    <string name="creature_url">Url</string>
    <string name="creature_image_description">Create Image</string>
    <string name="creature_save_success">Creature saved!!</string>
    <string name="creature_insert_failure">Unable to add creature</string>
    <string name="creature_insert_progress_message">Adding creature&#8230;</string>
    <string name="creature_finding_image_progress_message">Finding creature&#8230;</string>
    <string name="error_invalid_url">Enter a valid URL</string>
    <string name="error_missing_title">Enter a title</string>

    <!-- Account -->

    <string name="description_add_account">Add account</string>
    <string name="title_accounts_list">Select a Google account</string>
    <string name="empty_accounts">No Google accounts are available. Add an account to continue.</string>
    <string name="description_choose_account">Welcome to the Creatures app. The Creatures app uses Google Fusion Tables to share your creatures with others. Please select which Google account you would like to use to share your creatures.</string>
    <string name="taking_a_while">This is taking a while&#8230;</string>
    <string name="no_connection_cant_login">Can\'t sign in. Check your network connection.</string>

</resources>
