<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
            android:id="@+id/choose_account_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_choose_account"
            android:layout_marginBottom="16dp" />

    <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_accounts_list" />

    <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:cacheColorHint="@android:color/white"
            android:layout_weight="1" />

    <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceSmall"
            android:gravity="center"
            android:text="@string/empty_accounts" />

</LinearLayout>

