<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dip"
        android:orientation="vertical">

    <TextView
            style="@style/FormTitle"
            android:text="@string/creature_title"/>

    <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    <TextView
            style="@style/FormTitle"
            android:text="@string/creature_url"/>

    <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip">

        <LinearLayout
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyleLarge"/>

        </LinearLayout>

        <ImageView
                android:id="@+id/image"
                android:contentDescription="@string/creature_image_description"
                android:scaleType="fitCenter"
                android:layout_width="match_parent"
                android:layout_height="300dip"/>

    </FrameLayout>


</LinearLayout>